--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": "laravel/breeze",
-    "description": "Minimal Laravel authentication scaffolding with Blade and Tailwind.",
+    "name": "iskandarali/breeze",
+    "description": "Minimal Laravel authentication scaffolding with Blade and Bootstrap.",
     "keywords": ["laravel", "auth"],
     "license": "MIT",
     "support": {
-        "issues": "https://github.com/laravel/breeze/issues",
-        "source": "https://github.com/laravel/breeze"
+        "issues": "https://github.com/iskandarali/breeze/issues",
+        "source": "https://github.com/iskandarali/breeze"
     },
     "authors": [
         {
-            "name": "Taylor Otwell",
-            "email": "taylor@laravel.com"
+            "name": "Iskandar Ali",
+            "email": "miskandarmali@gmail.com"
         }
     ],
     "require": {
